[package]
name = "dapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "7895d232" }  # your current commit hash from error — test this first
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "7895d232" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "7895d232" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git", rev = "7895d232" }

anyhow = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
# Pin crates.io hashes (stable for riscv64 cross + host cargo build)
sha2 = "0.10"
ripemd = "0.1"
# secp256k1 for spendable vault keypairs (host recovery + optional verify)
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }

[[bin]]
name = "zk-proof-generator"
path = "src/bin/zk-proof-generator.rs"